# fifo-tool-datasets

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
fifo_tool_datasets/: cli.py
fifo_tool_datasets/sdk/hf_dataset_adapters/: README.md  common.py  conversation.py  conversations.py  dsl.py  single_question_n_answer.py  sqna.py
tests/: test_conversation.py  test_dsl.py  test_single_question_n_answer.py  test_sqna.py
